PMD Code Review and Cleanup