@@ -12,7 +12,9 @@
 
 package org.generationcp.middleware.manager.test;
 
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 import java.util.List;
 
@@ -23,16 +25,27 @@ import org.generationcp.middleware.manager.api.PedigreeDataManager;
 import org.generationcp.middleware.pojos.Germplasm;
 import org.generationcp.middleware.pojos.GermplasmPedigreeTree;
 import org.generationcp.middleware.pojos.GermplasmPedigreeTreeNode;
+import org.generationcp.middleware.util.Debug;
 import org.generationcp.middleware.utils.test.MockDataUtil;
+import org.junit.After;
 import org.junit.AfterClass;
-import org.junit.Assert;
+import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.Rule;
 import org.junit.Test;
+import org.junit.rules.TestName;
 
 public class TestPedigreeDataManager{
 
     private static ManagerFactory factory;
     private static PedigreeDataManager pedigreeManager;
+
+
+    private long startTime;
+
+    @Rule
+    public TestName name = new TestName();
+
 
     @BeforeClass
     public static void setUp() throws Exception {
@@ -42,16 +55,29 @@ public class TestPedigreeDataManager{
         pedigreeManager = factory.getPedigreeDataManager();
     }
 
+
+    @Before
+    public void beforeEachTest() {
+        Debug.println(0, "#####" + name.getMethodName() + " Start: ");
+        startTime = System.nanoTime();
+    }
+
+    @After
+    public void afterEachTest() {
+        long elapsedTime = System.nanoTime() - startTime;
+        Debug.println(0, "#####" + name.getMethodName() + " End: Elapsed Time = " + elapsedTime + " ns = " + ((double) elapsedTime / 1000000000) + " s");
+    }
+
     
     @Test
     public void testGetGermplasmDescendants() throws Exception {
         Integer gid = Integer.valueOf(47888);
         List<Object[]> germplsmList = pedigreeManager.getDescendants(gid, 0, 20);
 
-        System.out.println("testGetGermplasmDescendants(" + gid + ") RESULTS: ");
+        Debug.println(0, "testGetGermplasmDescendants(" + gid + "): ");
         for (Object[] object : germplsmList) {
-            System.out.println("  progenitor number: " + object[0]);
-            System.out.println("   " + object[1]);
+            Debug.println(0, "  progenitor number: " + object[0]);
+            Debug.println(0, "   " + object[1]);
         }
     }
 
@@ -59,7 +85,7 @@ public class TestPedigreeDataManager{
     public void testCountGermplasmDescendants() throws Exception {
         Integer gid = Integer.valueOf(47888);
         long count = pedigreeManager.countDescendants(gid);
-        System.out.println("testCountGermplasmDescendants(" + gid + ") RESULTS: " + count);
+        Debug.println(0, "testCountGermplasmDescendants(" + gid + ") RESULT: " + count);
     }
 
     @Test
@@ -67,14 +93,14 @@ public class TestPedigreeDataManager{
         Integer gid = Integer.valueOf(779745);
         Integer pNo = Integer.valueOf(10);
         Germplasm germplasm = pedigreeManager.getParentByGIDAndProgenitorNumber(gid, pNo);
-        System.out.println("testGetProgenitorByGID(" + gid + ", " + pNo + ") RESULTS: " + germplasm);
+        Debug.println(0, "testGetProgenitorByGID(" + gid + ", " + pNo + ") RESULT: " + germplasm);
     }
 
     @Test
     public void testGeneratePedigreeTree() throws Exception {
         Integer gid = Integer.valueOf(306436);
         int level = 4;
-        System.out.println("testGeneratePedigreeTree(" + gid + "," + level + ") RESULTS: ");
+        Debug.println(3, "GID = " + gid + ", level = " + level +  ":");
         GermplasmPedigreeTree tree = pedigreeManager.generatePedigreeTree(gid, level);
         if (tree != null) {
             printNode(tree.getRoot(), 1);
@@ -90,8 +116,8 @@ public class TestPedigreeDataManager{
         Boolean includeDerivativeLines = true;
         
         GermplasmPedigreeTree germplasmPedigreeTree = pedigreeManager.generatePedigreeTree(gid, levels, includeDerivativeLines);
-        System.out.println("generatePedigreeTree(" + gid + ", " + levels + ", " + includeDerivativeLines +")");
-        System.out.println(renderNode(germplasmPedigreeTree.getRoot(),""));
+        Debug.println(0, "generatePedigreeTree(" + gid + ", " + levels + ", " + includeDerivativeLines +")");
+        Debug.println(0, renderNode(germplasmPedigreeTree.getRoot(),""));
     }
     
     private String renderNode(GermplasmPedigreeTreeNode node, String prefix){
@@ -113,12 +139,12 @@ public class TestPedigreeDataManager{
         Integer gid = Integer.valueOf(2);
         int count = (int) pedigreeManager.countManagementNeighbors(gid);
         List<Germplasm> neighbors = pedigreeManager.getManagementNeighbors(gid, 0, count);
-        Assert.assertNotNull(neighbors);
-        Assert.assertTrue(!neighbors.isEmpty());
-        System.out.println("testGetManagementNeighbors(" + gid + ") RESULTS: " + count);
+        assertNotNull(neighbors);
+        assertTrue(!neighbors.isEmpty());
+        Debug.println(0, "testGetManagementNeighbors(" + gid + ") RESULT: " + count);
         for (Germplasm g : neighbors) {
             String name = g.getPreferredName() != null ? g.getPreferredName().getNval() : null;
-            System.out.println("  " + g.getGid() + " : " + name);
+            Debug.println(0, "  " + g.getGid() + " : " + name);
         }
     }
 
@@ -128,13 +154,13 @@ public class TestPedigreeDataManager{
         
         long count = pedigreeManager.countGroupRelatives(gid);
         List<Germplasm> neighbors = pedigreeManager.getGroupRelatives(gid, 0, (int) count);
-        Assert.assertNotNull(neighbors);
-        Assert.assertTrue(!neighbors.isEmpty());
+        assertNotNull(neighbors);
+        assertTrue(!neighbors.isEmpty());
 
-        System.out.println("testGetGroupRelatives(" + gid + ") RESULTS: " + neighbors.size());
+        Debug.println(0, "testGetGroupRelatives(" + gid + ") RESULT: " + neighbors.size());
         for (Germplasm g : neighbors) {
             String name = g.getPreferredName() != null ? g.getPreferredName().getNval() : null;
-            System.out.println("  " + g.getGid() + " : " + name);
+            Debug.println(0, "  " + g.getGid() + " : " + name);
         }
     }
 
@@ -142,13 +168,13 @@ public class TestPedigreeDataManager{
     public void testGetGenerationHistory() throws Exception {
         Integer gid = new Integer(50533);
         List<Germplasm> results = pedigreeManager.getGenerationHistory(gid);
-        Assert.assertNotNull(results);
-        Assert.assertTrue(!results.isEmpty());
+        assertNotNull(results);
+        assertTrue(!results.isEmpty());
 
-        System.out.println("testGetGenerationHistory(" + gid + ") RESULTS: " + results.size());
+        Debug.println(0, "testGetGenerationHistory(" + gid + ") RESULT: " + results.size());
         for (Germplasm g : results) {
             String name = g.getPreferredName() != null ? g.getPreferredName().getNval() : null;
-            System.out.println("  " + g.getGid() + " : " + name);
+            Debug.println(0, "  " + g.getGid() + " : " + name);
         }
     }
     
@@ -157,22 +183,21 @@ public class TestPedigreeDataManager{
         Integer id = Integer.valueOf(2);
         List<Object[]> results = pedigreeManager.getDescendants(id, 0, 100);
         assertNotNull(results);
-        Assert.assertTrue(!results.isEmpty());
-        System.out.println("testGetDescendants Results: ");
+        assertTrue(!results.isEmpty());
         for (Object[] result : results) {
-            System.out.println("  " + result);
+            Debug.println(0, "  " + result);
         }
-        System.out.println("Number of record/s: " + results.size() );
+        Debug.println(0, "Number of record/s: " + results.size() );
     }
     
 
     @Test
     public void testGetDerivativeNeighborhood() throws Exception {
-        Integer gid= new Integer(1);
-        int stepsBack=3;
-        int stepsForward=3;
+        Integer gid = Integer.valueOf(1);
+        int stepsBack = 3;
+        int stepsForward = 3;
         GermplasmPedigreeTree tree = pedigreeManager.getDerivativeNeighborhood(gid, stepsBack, stepsForward);
-        System.out.println("testGetDerivativeNeighborhood(" + gid+", " +stepsBack+", "+ stepsForward + ") RESULTS: ");
+        Debug.println(0, "testGetDerivativeNeighborhood(" + gid + ", " + stepsBack + ", " + stepsForward + "): ");
         if (tree != null) {
             printNode(tree.getRoot(), 1);
         }
@@ -181,49 +206,49 @@ public class TestPedigreeDataManager{
     @Test
     public void testGetDerivativeNeighborhood2() throws Exception {
     
-        System.out.println("TestDerivativeNeighborhood");
+        Debug.println(0, "TestDerivativeNeighborhood");
         MockDataUtil.mockNeighborhoodTestData(pedigreeManager, 'D');
         GermplasmPedigreeTree tree;
         
-        System.out.println("TestCase #1: GID = TOP node (GID, Backward, Forward = -1, 0, 6)");
+        Debug.println(0, "TestCase #1: GID = TOP node (GID, Backward, Forward = -1, 0, 6)");
         tree = pedigreeManager.getDerivativeNeighborhood(-1, 0, 6);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11****-12****-13*****-14**-8***-15****-17****-18*****-20***-16****-19", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11****-12****-13*****-14**-8***-15****-17****-18*****-20***-16****-19", MockDataUtil.printTree(tree, "*", ""));
         
-        System.out.println("TestCase #2: GID = LEAF node (GID, Backward, Forward = -5, 2, 10)");
+        Debug.println(0, "TestCase #2: GID = LEAF node (GID, Backward, Forward = -5, 2, 10)");
         tree = pedigreeManager.getDerivativeNeighborhood(-5, 2, 10);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11****-12****-13*****-14**-8***-15****-17****-18*****-20***-16****-19", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11****-12****-13*****-14**-8***-15****-17****-18*****-20***-16****-19", MockDataUtil.printTree(tree, "*", ""));
         
-        System.out.println("TestCase #3: GID = MID node AND Backward < Depth of LEAF (GID, Backward, Forward = -11, 1, 10)");
+        Debug.println(0, "TestCase #3: GID = MID node AND Backward < Depth of LEAF (GID, Backward, Forward = -11, 1, 10)");
         tree = pedigreeManager.getDerivativeNeighborhood(-11, 1, 10);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-7*-11**-12**-13***-14", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-7*-11**-12**-13***-14", MockDataUtil.printTree(tree, "*", ""));
         
-        System.out.println("TestCase #4: GID = MID node AND Backward = Dept of LEAF (GID, Backward, Forward = -11, 3, 10)");
+        Debug.println(0, "TestCase #4: GID = MID node AND Backward = Dept of LEAF (GID, Backward, Forward = -11, 3, 10)");
         tree = pedigreeManager.getDerivativeNeighborhood(-11, 3, 10);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11****-12****-13*****-14**-8***-15****-17****-18*****-20***-16****-19", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11****-12****-13*****-14**-8***-15****-17****-18*****-20***-16****-19", MockDataUtil.printTree(tree, "*", ""));
 
-        System.out.println("TestCase #5: GID = MID node AND Backward > Dept of LEAF (GID, Backward, Forward = -11, 5, 10)");
+        Debug.println(0, "TestCase #5: GID = MID node AND Backward > Dept of LEAF (GID, Backward, Forward = -11, 5, 10)");
         tree = pedigreeManager.getDerivativeNeighborhood(-11, 5, 10);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11****-12****-13*****-14**-8***-15****-17****-18*****-20***-16****-19", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11****-12****-13*****-14**-8***-15****-17****-18*****-20***-16****-19", MockDataUtil.printTree(tree, "*", ""));
 
-        System.out.println("TestCase #6: GID = MID node AND Forward < Tree Depth - MID depth (GID, Backward, Forward = -3, 1, 2)");
+        Debug.println(0, "TestCase #6: GID = MID node AND Forward < Tree Depth - MID depth (GID, Backward, Forward = -3, 1, 2)");
         tree = pedigreeManager.getDerivativeNeighborhood(-3, 1, 2);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11**-8***-15***-16", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2**-4***-9***-10**-5*-3**-6**-7***-11**-8***-15***-16", MockDataUtil.printTree(tree, "*", ""));
         
-        System.out.println("TestCase #7: GID is MAN, but Ancestors and Descendants have non-MAN members (GID, Backward, Forward = -15, 2, 1)");
+        Debug.println(0, "TestCase #7: GID is MAN, but Ancestors and Descendants have non-MAN members (GID, Backward, Forward = -15, 2, 1)");
         tree = pedigreeManager.getDerivativeNeighborhood(-15, 2, 1);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-3*-6*-7**-11***-12***-13*-8**-15***-17***-18**-16***-19", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-3*-6*-7**-11***-12***-13*-8**-15***-17***-18**-16***-19", MockDataUtil.printTree(tree, "*", ""));
 
-        System.out.println("TestCase #8: Should stop at GEN even if Backward count is not exhausted (GID, Backward, Forward = -9, 4, 1)");
+        Debug.println(0, "TestCase #8: Should stop at GEN even if Backward count is not exhausted (GID, Backward, Forward = -9, 4, 1)");
         tree = pedigreeManager.getDerivativeNeighborhood(-9, 4, 1);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-4*-9*-10", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-4*-9*-10", MockDataUtil.printTree(tree, "*", ""));
         
         //cleanup
         MockDataUtil.cleanupMockMaintenanceTestData(pedigreeManager);
@@ -238,7 +263,7 @@ public class TestPedigreeDataManager{
         }
 
         String name = node.getGermplasm().getPreferredName() != null ? node.getGermplasm().getPreferredName().getNval() : null;
-        System.out.println(tabs.toString() + node.getGermplasm().getGid() + " : " + name);
+        Debug.println(0, tabs.toString() + node.getGermplasm().getGid() + " : " + name);
 
         for (GermplasmPedigreeTreeNode parent : node.getLinkedNodes()) {
             printNode(parent, level + 1);
@@ -250,49 +275,48 @@ public class TestPedigreeDataManager{
     @Test
     public void testGetMaintenanceNeighborhood() throws Exception {
     
-        System.out.println("TestMaintenanceNeighborhood");
         MockDataUtil.mockNeighborhoodTestData(pedigreeManager, 'M');
         GermplasmPedigreeTree tree;
         
-        System.out.println("TestCase #1: GID = TOP node (GID, Backward, Forward = -1, 0, 6)");
+        Debug.println(0, "TestCase #1: GID = TOP node (GID, Backward, Forward = -1, 0, 6)");
         tree = pedigreeManager.getMaintenanceNeighborhood(-1, 0, 6);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2*-3**-6**-7***-11****-12****-13*****-14", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2*-3**-6**-7***-11****-12****-13*****-14", MockDataUtil.printTree(tree, "*", ""));
         
-        System.out.println("TestCase #2: GID = LEAF node (GID, Backward, Forward = -5, 2, 10)");
+        Debug.println(0, "TestCase #2: GID = LEAF node (GID, Backward, Forward = -5, 2, 10)");
         tree = pedigreeManager.getMaintenanceNeighborhood(-5, 2, 10);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2*-3**-6**-7***-11****-12****-13*****-14", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2*-3**-6**-7***-11****-12****-13*****-14", MockDataUtil.printTree(tree, "*", ""));
         
-        System.out.println("TestCase #3: GID = MID node AND Backward < Depth of LEAF (GID, Backward, Forward = -11, 1, 10)");
+        Debug.println(0, "TestCase #3: GID = MID node AND Backward < Depth of LEAF (GID, Backward, Forward = -11, 1, 10)");
         tree = pedigreeManager.getMaintenanceNeighborhood(-11, 1, 10);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-7*-11**-12**-13***-14", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-7*-11**-12**-13***-14", MockDataUtil.printTree(tree, "*", ""));
         
-        System.out.println("TestCase #4: GID = MID node AND Backward = Dept of LEAF (GID, Backward, Forward = -11, 3, 10)");
+        Debug.println(0, "TestCase #4: GID = MID node AND Backward = Dept of LEAF (GID, Backward, Forward = -11, 3, 10)");
         tree = pedigreeManager.getMaintenanceNeighborhood(-11, 3, 10);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2*-3**-6**-7***-11****-12****-13*****-14", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2*-3**-6**-7***-11****-12****-13*****-14", MockDataUtil.printTree(tree, "*", ""));
 
-        System.out.println("TestCase #5: GID = MID node AND Backward > Dept of LEAF (GID, Backward, Forward = -11, 5, 10)");
+        Debug.println(0, "TestCase #5: GID = MID node AND Backward > Dept of LEAF (GID, Backward, Forward = -11, 5, 10)");
         tree = pedigreeManager.getMaintenanceNeighborhood(-11, 5, 10);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2*-3**-6**-7***-11****-12****-13*****-14", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2*-3**-6**-7***-11****-12****-13*****-14", MockDataUtil.printTree(tree, "*", ""));
 
-        System.out.println("TestCase #6: GID = MID node AND Forward < Tree Depth - MID depth (GID, Backward, Forward = -3, 1, 2)");
+        Debug.println(0, "TestCase #6: GID = MID node AND Forward < Tree Depth - MID depth (GID, Backward, Forward = -3, 1, 2)");
         tree = pedigreeManager.getMaintenanceNeighborhood(-3, 1, 2);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2*-3**-6**-7***-11", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2*-3**-6**-7***-11", MockDataUtil.printTree(tree, "*", ""));
         
-        System.out.println("TestCase #7: GID is MAN, but Ancestors and Descendants have non-MAN members (GID, Backward, Forward = -15, 2, 1)");
+        Debug.println(0, "TestCase #7: GID is MAN, but Ancestors and Descendants have non-MAN members (GID, Backward, Forward = -15, 2, 1)");
         tree = pedigreeManager.getMaintenanceNeighborhood(-15, 2, 1);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-1*-2*-3**-6**-7***-11", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-1*-2*-3**-6**-7***-11", MockDataUtil.printTree(tree, "*", ""));
 
-        System.out.println("TestCase #8: Should stop at GEN even if Backward count is not exhausted (GID, Backward, Forward = -9, 4, 1)");
+        Debug.println(0, "TestCase #8: Should stop at GEN even if Backward count is not exhausted (GID, Backward, Forward = -9, 4, 1)");
         tree = pedigreeManager.getMaintenanceNeighborhood(-9, 4, 1);
         MockDataUtil.printTree(tree);
-        Assert.assertEquals("-4*-9*-10", MockDataUtil.printTree(tree, "*", ""));
+        assertEquals("-4*-9*-10", MockDataUtil.printTree(tree, "*", ""));
         
         //cleanup
         MockDataUtil.cleanupMockMaintenanceTestData(pedigreeManager);
@@ -306,8 +330,7 @@ public class TestPedigreeDataManager{
         Integer progenitorNumber = Integer.valueOf(2);
         Germplasm result = pedigreeManager.getParentByGIDAndProgenitorNumber(gid, progenitorNumber);
         assertNotNull(result);
-        System.out.println("testGetParentByGIDAndProgenitorNumber Results: ");
-        System.out.println("  " + result);
+        Debug.println(0, " RESULT: " + result);
     }
     
 
@@ -315,24 +338,24 @@ public class TestPedigreeDataManager{
     public void testCountDescendants() throws Exception {
         Integer gid = 10; //change gid value
         long count = pedigreeManager.countDescendants(gid);
-        Assert.assertNotNull(count);
-        System.out.println("testCountDescendants("+gid+") Results: " + count);
+        assertNotNull(count);
+        Debug.println(0, "testCountDescendants("+gid+") Result: " + count);
     }
     
     @Test
     public void testCountGroupRelatives() throws Exception {
         Integer gid = 1; //change gid value
         long count = pedigreeManager.countGroupRelatives(gid);
-        Assert.assertNotNull(count);
-        System.out.println("testCountGroupRelatives("+gid+") Results: " + count);
+        assertNotNull(count);
+        Debug.println(0, "testCountGroupRelatives("+gid+") Result: " + count);
     }
     
     @Test
     public void testCountManagementNeighbors() throws Exception {
         Integer gid = 1; //change gid value
         long count = pedigreeManager.countManagementNeighbors(gid);
-        Assert.assertNotNull(count);
-        System.out.println("testCountManagementNeighbors("+gid+") Results: " + count);
+        assertNotNull(count);
+        Debug.println(0, "testCountManagementNeighbors("+gid+") Result: " + count);
     }
     
     @Test
@@ -341,9 +364,9 @@ public class TestPedigreeDataManager{
         int locationID = 187;
         List<Germplasm> results = pedigreeManager.getPedigreeLine(gid, locationID);
 
-        System.out.println("testGetPedigreeLine(" + gid + ", " + locationID + ") RESULTS: " + results.size());
+        Debug.println(0, "testGetPedigreeLine(" + gid + ", " + locationID + ") RESULT: " + results.size());
         for (Germplasm g : results) {
-        	System.out.println("  " + g);
+        	Debug.println(0, "  " + g);
         }
     }
 
